@@ -568,8 +568,8 @@ typedef enum {
     XML_SCHEMAP_WILDCARD_INVALID_NS_MEMBER, /* 1791 */
     XML_SCHEMAP_INTERSECTION_NOT_EXPRESSIBLE, /* 1792 */
     XML_SCHEMAP_UNION_NOT_EXPRESSIBLE, /* 1793 */
-    XML_SCHRMAP_SRC_IMPORT_3_1, /* 1794 */
-    XML_SCHRMAP_SRC_IMPORT_3_2, /* 1795 */
+    XML_SCHEMAP_SRC_IMPORT_3_1, /* 1794 */
+    XML_SCHEMAP_SRC_IMPORT_3_2, /* 1795 */
     XML_SCHEMAV_NOROOT = 1800,
     XML_SCHEMAV_UNDECLAREDELEM, /* 1801 */
     XML_SCHEMAV_NOTTOPLEVEL, /* 1802 */
